--- a/config/final.yml
+++ b/config/final.yml
@@ -1,7 +1,5 @@
 name: elasticsearch
 blobstore:
-  provider: s3
+  provider: local
   options:
-    bucket_name: elastic-search-boshrelease
-    region: ap-northeast-1
-    endpoint: https://s3-ap-northeast-1.amazonaws.com
+    blobstore_path: ../blobs
