--- a/jobs/elasticsearch/templates/config/elasticsearch.yml
+++ b/jobs/elasticsearch/templates/config/elasticsearch.yml
@@ -1,91 +1,4 @@
 # ======================== Elasticsearch Configuration =========================
-#
-# NOTE: Elasticsearch comes with reasonable defaults for most settings.
-#       Before you set out to tweak and tune the configuration, make sure you
-#       understand what are you trying to accomplish and the consequences.
-#
-# The primary way of configuring a node is via this file. This template lists
-# the most important settings you may want to configure for a production cluster.
-#
-# Please consult the documentation for further information on configuration options:
-# https://www.elastic.co/guide/en/elasticsearch/reference/index.html
-#
-# ---------------------------------- Cluster -----------------------------------
-#
-# Use a descriptive name for your cluster:
-#
-#cluster.name: my-application
-#
-# ------------------------------------ Node ------------------------------------
-#
-# Use a descriptive name for the node:
-#
-#node.name: node-1
-#
-# Add custom attributes to the node:
-#
-#node.attr.rack: r1
-#
-# ----------------------------------- Paths ------------------------------------
-#
-# Path to directory where to store the data (separate multiple locations by comma):
-#
-#path.data: /path/to/data
-#
-# Path to log files:
-#
-#path.logs: /path/to/logs
-#
-# ----------------------------------- Memory -----------------------------------
-#
-# Lock the memory on startup:
-#
-#bootstrap.memory_lock: true
-#
-# Make sure that the heap size is set to about half the memory available
-# on the system and that the owner of the process is allowed to use this
-# limit.
-#
-# Elasticsearch performs poorly when the system is swapping the memory.
-#
-# ---------------------------------- Network -----------------------------------
-#
-# Set the bind address to a specific IP (IPv4 or IPv6):
-#
-#network.host: 192.168.0.1
-#
-# Set a custom port for HTTP:
-#
-#http.port: 9200
-#
-# For more information, consult the network module documentation.
-#
-# --------------------------------- Discovery ----------------------------------
-#
-# Pass an initial list of hosts to perform discovery when this node is started:
-# The default list of hosts is ["127.0.0.1", "[::1]"]
-#
-#discovery.seed_hosts: ["host1", "host2"]
-#
-# Bootstrap the cluster using an initial set of master-eligible nodes:
-#
-#cluster.initial_master_nodes: ["node-1", "node-2"]
-#
-# For more information, consult the discovery and cluster formation module documentation.
-#
-# ---------------------------------- Gateway -----------------------------------
-#
-# Block initial recovery after a full cluster restart until N nodes are started:
-#
-#gateway.recover_after_nodes: 3
-#
-# For more information, consult the gateway module documentation.
-#
-# ---------------------------------- Various -----------------------------------
-#
-# Require explicit names when deleting indices:
-#
-#action.destructive_requires_name: true
 
 bootstrap.memory_lock: true
 network.host: 0.0.0.0
@@ -93,9 +6,8 @@ path.logs: /var/vcap/sys/log/elasticsearch
 path.data: /var/vcap/store/elasticsearch
 node.name: <%= name %>/<%= index %>
 node.attr.zone: <%= spec.az %>
-node.master: <%= p("elasticsearch.node.allow_master") %>
-node.data: <%= p("elasticsearch.node.allow_data") %>
-node.ingest: <%= p("elasticsearch.node.allow_ingest") %>
+
+node.roles: <%= p('elasticsearch.node.roles') %>
 
 <%
   cluster_name = nil
@@ -116,9 +28,32 @@ cluster.name: <%= cluster_name %>
 discovery.seed_hosts: <%= master_hosts.join(',') %>
 <% if p("elasticsearch.migrate_6_to_7") %>
 cluster.initial_master_nodes: <%= master_hosts.join(',') %>
-<% elsif p("elasticsearch.node.allow_master") && index == 0 %>
-cluster.initial_master_nodes: <%= master_hosts[0] %>
+<% elsif (p('elasticsearch.node.roles').to_s.include? "master") && (index == 0) %>
+cluster.initial_master_nodes: <%= name %>/<%= index %>
 <% end %>
 <% if_p('elasticsearch.config_options') do |config_options| %>
 <%= config_options.to_yaml.gsub(/---/, '') %>
 <% end %>
+
+<%- if p("elasticsearch.tls.enabled") == true -%>
+xpack.security.audit.enabled: true
+xpack.security.enabled: true
+xpack.security.transport.ssl.enabled: true
+xpack.security.transport.ssl.verification_mode: <%= p("elasticsearch.tls.mode") %>
+xpack.security.http.ssl.enabled: true
+
+<%- unless p("elasticsearch.tls.ca").blank? -%>
+xpack.security.transport.ssl.certificate_authorities: "/var/vcap/packages/elasticsearch/config/tls/tls/ca_file"
+xpack.security.http.ssl.certificate_authorities: "/var/vcap/packages/elasticsearch/config/tls/tls/ca_file"
+<%- else raise "'elasticsearch.tls.ca' must be set when TLS is enabled!" end -%>
+
+<%- unless p("elasticsearch.tls.cert").blank? -%>
+xpack.security.transport.ssl.certificate: "/var/vcap/packages/elasticsearch/config/tls/tls/nodecert.crt"
+xpack.security.http.ssl.certificate: "/var/vcap/packages/elasticsearch/config/tls/tls/nodecert.crt"
+<%- else raise "'elasticsearch.tls.cert' must be set when TLS is enabled!" end -%>
+
+<%- unless p("elasticsearch.tls.key").blank? -%>
+xpack.security.transport.ssl.key: "/var/vcap/packages/elasticsearch/config/tls/tls/nodeprivkey.key"
+xpack.security.http.ssl.key: "/var/vcap/packages/elasticsearch/config/tls/tls/nodeprivkey.key"
+<%- else raise "'elasticsearch.tls.key' must be set when TLS is enabled!" end -%>
+<%- end -%>
